@@ -73,6 +73,13 @@ class BaseTest(unittest.TestCase):
             b.byteswap()
             self.assertEqual(a, b)
 
+    def test_copy(self):
+        import copy
+        a = array.array(self.typecode, self.example)
+        b = copy.copy(a)
+        self.assertNotEqual(id(a), id(b))
+        self.assertEqual(a, b)
+
     def test_insert(self):
         a = array.array(self.typecode, self.example)
         a.insert(0, self.example[0])
